# vertTIRP_c

./: .gitignore  Allen.cpp  Allen.h  AllenRelationsEPS.cpp  AllenRelationsEPS.h  Allen_relationsEPS.cpp  Allen_relationsEPS.h  CMakeLists.txt  Chrono.cpp  Chrono.h  Global.cpp  Global.h  PairingStrategy.cpp  PairingStrategy.h  README.md  Relation.cpp  Relation.h  TI.cpp  TI.h  TIRP.cpp  TIRP.h  TIRPstatistics.cpp  TIRPstatistics.h  TODO.txt  Utils.cpp  Utils.h  VertTIRP.cpp  VertTIRP.h  VertTirpNode.cpp  VertTirpNode.h  VertTirpSidList.cpp  VertTirpSidList.h  cmake_linux.sh  main.cpp  toy.csv  toy2.csv
.run/: vertTIRP_c.run.xml
datasets/: CBL.csv  HAR.csv  asl.csv  asl_ds.csv  har.csv  mav.csv  sensors.csv  sensors2.csv
